--- a/agent-skills.mdx
+++ b/agent-skills.mdx
@@ -1,6 +1,6 @@
 ---
 title: "ModelsLab Agent Skills"
-description: "Install and use ModelsLab Agent Skills in your coding agents"
+description: "Install ModelsLab Agent Skills to generate AI images, videos, and audio directly from coding agents like Claude Code, Cursor, and other MCP-compatible tools."
 ---
 
 ## Overview
