--- a/authentication.mdx
+++ b/authentication.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Authentication"
-description: "How to authenticate your API requests with ModelsLab"
+description: "Learn how to authenticate your ModelsLab API requests. Get your API key, configure headers, and securely integrate ModelsLab AI APIs into your application."
 ---
 
 ## Getting Your API Key
