--- a/enterprise-api/flux-headshot/overview.mdx
+++ b/enterprise-api/flux-headshot/overview.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Overview"
-description: "This endpoint allows you to generate head shot with flux capabilities."
+title: "Enterprise FLUX Headshot API"
+description: "Generate AI headshots on dedicated enterprise servers using FLUX. Professional portrait generation with private GPU infrastructure."
 ---
 
 
