--- a/enterprise-api/flux/overview.mdx
+++ b/enterprise-api/flux/overview.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Overview"
-description: "Generate images with FLUX."
+title: "Enterprise FLUX API"
+description: "Run FLUX image generation on dedicated enterprise servers. Text-to-image and image-to-image with private GPU infrastructure."
 ---
 
 <Tip>
