--- a/enterprise-api/qwen/overview.mdx
+++ b/enterprise-api/qwen/overview.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Overview"
-description: "Collection of endpoints to generate high-definition images with Qwen Image API."
+title: "Enterprise Qwen API"
+description: "Run Qwen image generation models on dedicated enterprise servers. Text-to-image, image-to-image, and inpainting with full server control."
 ---
 
 ## Endpoints
