--- a/enterprise-api/realtime/overview.mdx
+++ b/enterprise-api/realtime/overview.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Overview"
-description: "Collection of endpoints to generate images in seconds using text or image as input."
+title: "Enterprise Realtime API"
+description: "Real-time image generation on dedicated enterprise GPU servers. Ultra-fast text-to-image, image-to-image, and inpainting endpoints."
 ---
 
 ## Endpoints
