--- a/enterprise-api/text-to-video-ultra/overview.mdx
+++ b/enterprise-api/text-to-video-ultra/overview.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Overview"
-description: "Endpoints to generate ultra-high quality videos from text prompts and manage your video generation server."
+title: "Enterprise Text to Video Ultra API"
+description: "High-quality text-to-video generation on dedicated enterprise GPU servers. Ultra model video generation with full server management."
 ---
 
 ## Endpoints
