--- a/enterprise-api/video/overview.mdx
+++ b/enterprise-api/video/overview.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Overview"
-description: "Endpoints to generate videos from text or images and manage your video generation server."
+title: "Enterprise Video API"
+description: "Enterprise video generation on dedicated GPU servers. Text-to-video and image-to-video with private infrastructure and full server control."
 ---
 
 ## Endpoints
