--- a/enterprise-api/voice-cloning/overview.mdx
+++ b/enterprise-api/voice-cloning/overview.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Overview"
-description: "Endpoints to generate speech, clone voices, create music, and manage your dedicated voice server."
+title: "Enterprise Voice Cloning API"
+description: "Enterprise voice cloning and audio generation on dedicated GPU servers. TTS, voice-to-voice, music gen, and SFX with private infrastructure."
 ---
 
 ## Endpoints
