--- a/general-api/overview.mdx
+++ b/general-api/overview.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Overview"
-description: 'This section contains a collection of handy endpoints to make your experience with our APIs easier.'
+title: "General Utility APIs"
+description: "ModelsLab utility endpoints for base64 conversion, model management, subscription handling, cache management, and NSFW content checks."
 ---
 
 ### Endpoints
