--- a/image-editing/overview.mdx
+++ b/image-editing/overview.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Overview"
-description: 'The image editing suite brings you some exclusive API endpoints with few default essential endpoints.'
+title: "Image Editing API"
+description: "AI image editing API for face generation, inpainting, outpainting, background removal, super resolution, headshots, and object removal."
 ---
 
 ### Endpoints
