--- a/image-generation/flux/overview.mdx
+++ b/image-generation/flux/overview.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Overview'
-description: 'Generate higher quality images with Flux family of models.'
+title: 'FLUX Image Generation API'
+description: 'Generate high-quality AI images with FLUX models. Text-to-image generation using state-of-the-art FLUX architecture via ModelsLab API.'
 ---
 
 ### Endpoints
