--- a/image-generation/realtime-stable-diffusion/overview.mdx
+++ b/image-generation/realtime-stable-diffusion/overview.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Overview"
-description: "Collection of APIs that lets you generate images in seconds."
+title: "Realtime Stable Diffusion API"
+description: "Generate images in real-time with optimized Stable Diffusion models. Ultra-fast text-to-image, image-to-image, and inpainting endpoints."
 ---
 
 ### Endpoints
