--- a/voice-cloning/overview.mdx
+++ b/voice-cloning/overview.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Overview"
-description: 'Tools for speech-to-text, text-to-speech, text-to-SFX, and voice-over, and many more.'
+title: "Voice & Audio API"
+description: "Text-to-speech, voice cloning, speech-to-text, sound effects, music generation, song creation, and vocal isolation via ModelsLab's Audio API."
 ---
 
 
