--- a/workflows-api/overview.mdx
+++ b/workflows-api/overview.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Overview"
-description: "Execute your custom workflows programmatically."
+title: "Workflows API"
+description: "Build and run multi-step AI workflows. List available workflows, execute them with custom parameters, and monitor execution status."
 ---
 
 The Workflows API allows you to execute your custom workflows programmatically. Each workflow you create can be enabled as an API endpoint with its own unique parameters and responses.
