--- a/enterprise-api/deepfake/overview.mdx
+++ b/enterprise-api/deepfake/overview.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Overview"
-description: "The Deepfake Endpoints bring a collection of interesting endpoints that allow you to generate interactive videos and images."
+title: "Enterprise Deepfake API"
+description: "Enterprise deepfake video generation on dedicated GPU servers. Face swapping with private infrastructure and full server control."
 ---
 
 <Tip>
