--- a/enterprise-api/deepseek-chat/overview.mdx
+++ b/enterprise-api/deepseek-chat/overview.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Overview"
-description: "Collection of endpoints to start uncensored AI conversations."
+title: "Enterprise DeepSeek Chat API"
+description: "Run DeepSeek large language models on dedicated enterprise GPU servers. Private chat AI infrastructure with full server management."
 ---
 
 <CardGroup>
