--- a/enterprise-api/speech-to-text/overview.mdx
+++ b/enterprise-api/speech-to-text/overview.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Overview"
-description: "Enterprise API for Speech to Text."
+title: "Enterprise Speech to Text API"
+description: "Enterprise speech-to-text transcription on dedicated GPU servers. Accurate audio transcription with private infrastructure."
 ---
 
 <Tip>
