--- a/enterprise-api/uncensored-chat/overview.mdx
+++ b/enterprise-api/uncensored-chat/overview.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Overview"
-description: "Endpoints to start and manage uncensored chat conversations on your dedicated server."
+title: "Enterprise Uncensored Chat API"
+description: "Enterprise uncensored chat AI on dedicated GPU servers. Run unrestricted language models with private infrastructure."
 ---
 
 ## Endpoints
