--- a/image-generation/controlnet/overview.mdx
+++ b/image-generation/controlnet/overview.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Overview"
-description: 'The ControlNet API provides more control over the generated images. It also supports providing multiple ControlNet models.'
+title: "ControlNet API"
+description: 'Control AI image generation with ControlNet. Guide outputs using edge detection, pose estimation, depth maps, and other conditioning methods.'
 ---
 
 ### Endpoints
