--- a/index.mdx
+++ b/index.mdx
@@ -1,6 +1,6 @@
 ---
-title: ModelsLab Documentation
-description: "Developer Guide"
+title: "ModelsLab API Documentation"
+description: "Complete developer documentation for ModelsLab's AI API suite. Generate images, videos, audio, 3D models with Stable Diffusion, FLUX, and 10,000+ AI models. SDKs for Python, TypeScript, PHP, Dart, and Go."
 ---
 
 <img
