--- a/open-source/modelq/overview.mdx
+++ b/open-source/modelq/overview.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Overview"
-description: "ModelQ is a fast, lightweight Python library for scheduling ML inference tasks using Redis and threading, serving as a simpler alternative to Celery."
+title: "ModelQ - Open Source Queue Manager"
+description: "ModelQ is an open-source task queue manager for AI workloads. Manage and distribute AI model inference tasks efficiently."
 ---
 
 ![Modelq Pn](/images/modelq.png)
