Revert "fix SEO tags"
This reverts commit 4a81ed7ce2384f0238087030c8b688402b70cf7a.

--- a/3d-api/overview.mdx
+++ b/3d-api/overview.mdx
@@ -1,6 +1,6 @@
 ---
-title: "3D Generation API"
-description: "Transform text and images into 3D models and objects. Generate 3D characters from text prompts or reference images via ModelsLab's 3D API."
+title: "Overview"
+description: 'The 3D VERSE API provides a collection of endpoints that enable you to transform images or text into 3D representations.'
 ---
 
 ### Endpoints
