--- a/deepfake-api/overview.mdx
+++ b/deepfake-api/overview.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Deepfake API"
-description: "Generate deepfake videos and images with face swapping. Supports single and multiple face swap, video face swap, and specific face targeting."
+title: "Overview"
+description: 'The Deepfake API provides a suite of endpoints to generate interactive videos and images by swapping faces in various configurations.'
 ---
 
 <Warning>
