--- a/enterprise-api/3d-api/overview.mdx
+++ b/enterprise-api/3d-api/overview.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Enterprise 3D API"
-description: "Enterprise-grade 3D generation on dedicated GPU servers. Text-to-3D and image-to-3D with full server management and cache control."
+title: "Overview"
+description: "Collection of endpoints that enable you to transform images or text into 3D representations."
 ---
 
 <Tip>
