--- a/enterprise-api/flux-2-dev/overview.mdx
+++ b/enterprise-api/flux-2-dev/overview.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Enterprise FLUX 2 Dev API"
-description: "Run FLUX 2 Dev models on dedicated enterprise GPU servers. Advanced text-to-image and image-to-image generation with full server control."
+title: "Overview"
+description: "Generate images with FLUX 2 DEV model"
 ---
 
 <Tip>
