--- a/enterprise-api/general/overview.mdx
+++ b/enterprise-api/general/overview.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Enterprise General Settings"
-description: "Manage enterprise server S3 storage settings. Configure and reset S3 details for your dedicated ModelsLab enterprise infrastructure."
+title: "Overview"
+description: "Collection of endpoints that are general to all server types."
 ---
 
 ### Endpoints
