--- a/enterprise-api/image-to-video-ultra/overview.mdx
+++ b/enterprise-api/image-to-video-ultra/overview.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Enterprise Image to Video Ultra API"
-description: "Convert images to high-quality videos on dedicated enterprise GPU servers. Ultra image-to-video with private infrastructure."
+title: "Overview"
+description: "Generate high-definition videos from images using the Image to Video Ultra API."
 ---
 
 ## Endpoints
