--- a/enterprise-api/interior/overview.mdx
+++ b/enterprise-api/interior/overview.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Enterprise Interior Design API"
-description: "Enterprise AI interior design on dedicated GPU servers. Room decoration, floor planning, and rendering with private infrastructure."
+title: "Overview"
+description: "Collection of endpoints to generate interiors, floor decoration and floor planning."
 ---
 
 ## Endpoints
