--- a/enterprise-api/overview.mdx
+++ b/enterprise-api/overview.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Enterprise API Documentation"
-description: "Deploy and manage dedicated AI infrastructure with ModelsLab Enterprise API. Private GPU servers, custom models, and full server control."
+title: "Enterprise"
+description: "Collection of All Enterprise APIs offfered by Modelslab."
 ---
 
 <Panel>
