--- a/enterprise-api/text-to-image/overview.mdx
+++ b/enterprise-api/text-to-image/overview.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Enterprise Text to Image API"
-description: "Enterprise Stable Diffusion text-to-image on dedicated GPU servers. Load custom models, ControlNet, inpainting, and full server management."
+title: "Overview"
+description: "Comprehensive endpoints for managing models, generating images/videos, and controlling your dedicated server."
 ---
 
 ## Endpoints
