--- a/enterprise-api/text-to-speech/overview.mdx
+++ b/enterprise-api/text-to-speech/overview.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Enterprise Text to Speech API"
-description: "Enterprise text-to-speech on dedicated GPU servers. High-quality voice synthesis with private infrastructure and full server management."
+title: "Overview"
+description: "Enterprise API for Text to Speech"
 ---
 
 <Tip>
