--- a/enterprise-api/z-image-turbo/overview.mdx
+++ b/enterprise-api/z-image-turbo/overview.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Enterprise Z Image Turbo API"
-description: "Ultra-fast turbo image generation on dedicated enterprise GPU servers. Optimized text-to-image with full server management."
+title: "Overview"
+description: "Generate images with z image turbo model"
 ---
 
 <Tip>
