--- a/image-generation/a1111-scheduler/overview.mdx
+++ b/image-generation/a1111-scheduler/overview.mdx
@@ -1,6 +1,6 @@
 ---
-title: "A1111 Schedulers"
-description: 'Configure Automatic1111-compatible schedulers for Stable Diffusion image generation. Full list of supported sampling methods and schedulers.'
+title: "Overview"
+description: 'list of All available A1111 Diffusers Schedulers.'
 ---
 
 <CardGroup>
