--- a/image-generation/community-models/overview.mdx
+++ b/image-generation/community-models/overview.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Community Models - DreamBooth API"
-description: 'Access 10,000+ community-trained Stable Diffusion models via DreamBooth API. Text-to-image, image-to-image, inpainting, and LoRA support.'
+title: "Overview"
+description: 'Collection of APIs that lets you use Community LoRA Models and many more.'
 ---
 
 <Info>
