--- a/image-generation/overview.mdx
+++ b/image-generation/overview.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Image Generation API"
-description: "Generate stunning AI images with 10,000+ Stable Diffusion models, FLUX, ControlNet, and community models via ModelsLab's Image Generation API."
+title: "Overview"
+description: 'Image generation APIs including Stable Diffusion, FLUX, ControlNet, and community models.'
 ---
 
 ### Categories
