--- a/image-generation/train-model/overview.mdx
+++ b/image-generation/train-model/overview.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Model Training API"
-description: 'Train and fine-tune custom AI image models with LoRA. Upload datasets, monitor training status, and manage your fine-tuned models.'
+title: "Overview"
+description: 'Collection of APIs dedicated to model training.'
 ---
 
 ### Endpoints
