--- a/interior-api/overview.mdx
+++ b/interior-api/overview.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Interior Design API"
-description: "AI-powered interior design API for room decoration, floor planning, scenario changes, sketch rendering, and exterior restoration."
+title: "Overview"
+description: 'The Interior API provides a collection of endpoints that allow you to generate interiors, floor decorations, and floor plans.'
 ---
 
 ### Endpoints
