--- a/uncensored-chat-api/overview.mdx
+++ b/uncensored-chat-api/overview.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Uncensored Chat API"
-description: "Build uncensored AI chat applications with ModelsLab's Chat API. Supports chat completions and uncensored conversation endpoints."
+title: "Overview"
+description: "Uncensored Chat API allows you to engage in open conversations without any restrictions, rules, or censorship."
 ---
 
 ### Endpoints
