--- a/video-api/overview.mdx
+++ b/video-api/overview.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Video Generation API"
-description: "Generate and edit AI videos from text prompts and images. Supports text-to-video, image-to-video, video-to-video, and scene generation via ModelsLab API."
+title: "Overview"
+description: "API for generating and processing videos from text and images."
 ---
 
 ### Endpoints
