--- a/api-reference.mdx
+++ b/api-reference.mdx
@@ -1,6 +1,6 @@
 ---
-title: "API Reference"
-description: "Complete ModelsLab API reference with endpoints for image generation, video creation, voice cloning, 3D models, and more. Includes request examples and response schemas."
+title: 'API Reference'
+description: 'API Reference'
 ---
 
 ModelsLab is a Developer-first [AI Platform](https://modelslab.com) for image generation, video creation, and multimodal AI applications. 
