--- a/enterprise-api/face-gen/overview.mdx
+++ b/enterprise-api/face-gen/overview.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Enterprise Face Generation API"
-description: "AI face generation on dedicated enterprise GPU servers. Generate realistic faces with full server management and cache control."
+title: "Overview"
+description: "This endpoint allows you to generate faces in the fastest time."
 ---
 
 <Tip>
