--- a/enterprise-api/flux-kontext-dev/overview.mdx
+++ b/enterprise-api/flux-kontext-dev/overview.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Enterprise FLUX Kontext Dev API"
-description: "Run FLUX Kontext Dev image-to-image generation on dedicated enterprise servers. Context-aware image editing with private GPU infrastructure."
+title: "Overview"
+description: "This endpoint allows you to generate Images from given image."
 ---
 
 ## Available Endpoints
