--- a/enterprise-api/image-editing/overview.mdx
+++ b/enterprise-api/image-editing/overview.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Enterprise Image Editing API"
-description: "Enterprise AI image editing on dedicated GPU servers. Face gen, fashion, headshots, object removal, inpainting, and outpainting."
+title: "Overview"
+description: "The image editing suite offers exclusive API endpoints with essential features."
 ---
 
 ### Endpoints
