--- a/enterprise-api/super-resolution/overview.mdx
+++ b/enterprise-api/super-resolution/overview.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Enterprise Super Resolution API"
-description: "AI image upscaling on dedicated enterprise GPU servers. Enhance image resolution with full server management and cache control."
+title: "Overview"
+description: "Collection of endpoints to upscale images with face enhancement and resolution control."
 ---
 
 ## Endpoints
