--- a/error-codes.mdx
+++ b/error-codes.mdx
@@ -74,7 +74,7 @@ Some legacy endpoints may return `messege` instead of `message`. Handle both fie
     }
     ```
 
-    **Solution**: Add credits or renew your subscription from your [dashboard](https://modelslab.com/dashboard) or view [pricing plans](https://modelslab.com/pricing).
+    **Solution**: Add credits or renew your subscription in the [billing section](https://modelslab.com/dashboard/billing).
   </Accordion>
 
   <Accordion title="403 - Forbidden" icon="ban">
