--- a/image-generation/model-operation/overview.mdx
+++ b/image-generation/model-operation/overview.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Model Operations API"
-description: 'Manage AI models on ModelsLab. List available models, upload custom models, and retrieve fine-tuned model information via API.'
+title: "Overview"
+description: 'Collection of APIs for model operations.'
 ---
 
 ## Endpoints
