--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Quickstart"
-description: "Get started with ModelsLab API in under 5 minutes. Generate your first AI image with a simple API call using cURL, Python, or JavaScript."
+description: "Generate your first AI image in under 5 minutes"
 ---
 
 ## Overview
