--- a/rate-limits.mdx
+++ b/rate-limits.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Rate Limits"
-description: "Understanding ModelsLab API rate limits, request queuing, and concurrency limits for Free, Starter, Pro, and Enterprise subscription plans."
+description: "Understanding API rate limits and request queuing for different subscription plans."
 ---
 
 <Info>
