--- a/release-notes/overview.mdx
+++ b/release-notes/overview.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Release Notes"
-description: "Latest updates, new features, bug fixes, and improvements to the ModelsLab API platform, playground, and developer tools."
+title: 'Overview'
+description: 'Stay up to date with the latest features, improvements, and bug fixes in ModelsLab.'
 ---
 
 <Columns cols={2}>
