--- a/webhooks.mdx
+++ b/webhooks.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Webhooks"
-description: "Configure webhooks to receive real-time notifications when ModelsLab API requests complete. Set up callback URLs for async image, video, and audio generation."
+description: "Receive notifications when your API requests complete"
 ---
 
 ## Overview
