--- a/enterprise-api/speech-to-text/speech-to-text.mdx
+++ b/enterprise-api/speech-to-text/speech-to-text.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Speech to Text"
-description: "Generate text from audio using our enterprise API."
+title: "Speech To Text"
+description: "Speech-to-Text allow to convert audio into written transcription in multiple languages."
 openapi: "POST /enterprise/speech_to_text/transcribe"
 ---
 
@@ -12,15 +12,16 @@ Make a `POST` request to below endpoint and pass the required parameters as a re
 --request POST 'https://modelslab.com/api/v1/enterprise/speech_to_text/transcribe' \
 ```
 
-
-
 ## Body
 
 ```json json
-{    
-    "key": "enterprise_api_key",
-    "init_audio":"audio you want to transcribe to text",
-    "language":"en",
+{
+  "key": "enterprise_api_key",
+  "init_audio": "https://pub-f3505056e06f40d6990886c8e14102b2.r2.dev/audio/tom_hanks_1.wav",
+  "language": "en",
+  "timestamp_level": null,
+  "webhook": null,
+  "track_id": null
 }
 ```
 
@@ -34,64 +35,10 @@ Make a `POST` request to below endpoint and pass the required parameters as a re
   The audio file to transcribe.
 </ParamField>
 
-
 <ParamField query="language" default="en" type="string">
   Language for the voice.\
   Allowed values: `af`, `ar`, `be`, `bn`, `bg`, `zh`, `cs`, `da`, `nl`, `en`, `fi`, `fr`, `de`, `el`, `he`, `hi`, `hu`, `id`, `it`, `ja`, `kn`, `ko`, `ml`, `mr`, `ne`, `pa`, `fa`, `pl`, `pt`, `ro`, `ru`, `sr`, `es`, `sv`, `tl`, `ta`, `te`, `th`, `tr`, `uk`, `ur`, `vi`, `cy`
 </ParamField>
-
-<Note>
-Whisper supports several languages, but performance may vary due to factors like limited training data, script complexity, and regional dialects, potentially affecting transcription accuracy.
-</Note>
-
-## Supported Languages
-
-| Language | Code |
-|----------|------|
-| Afrikaans | af |
-| Arabic | ar |
-| Belarusian | be |
-| Bengali | bn |
-| Bulgarian | bg |
-| Chinese | zh |
-| Czech | cs |
-| Danish | da |
-| Dutch | nl |
-| English | en |
-| Finnish | fi |
-| French | fr |
-| German | de |
-| Greek | el |
-| Hebrew | he |
-| Hindi | hi |
-| Hungarian | hu |
-| Indonesian | id |
-| Italian | it |
-| Japanese | ja |
-| Kannada | kn |
-| Korean | ko |
-| Malayalam | ml |
-| Marathi | mr |
-| Nepali | ne |
-| Panjabi | pa |
-| Persian | fa |
-| Polish | pl |
-| Portuguese | pt |
-| Romanian | ro |
-| Russian | ru |
-| Serbian | sr |
-| Spanish | es |
-| Swedish | sv |
-| Tagalog | tl |
-| Tamil | ta |
-| Telugu | te |
-| Thai | th |
-| Turkish | tr |
-| Ukrainian | uk |
-| Urdu | ur |
-| Vietnamese | vi |
-| Welsh | cy |
-
 
 <ParamField query="timestamp_level" default="null">
   Timestamp level for the transcription.\
@@ -105,3 +52,59 @@ Whisper supports several languages, but performance may vary due to factors like
 <ParamField query="track_id" type="integer">
   ID for webhook identification.
 </ParamField>
+
+<Warning>
+**Timestamp Level Accuracy:** Sentence-level timestamps work well and provide reliable results. However, word-level timestamps may not be accurate and may provide less reliable results.
+</Warning>
+
+<Note>
+Whisper supports several languages, but performance may vary due to factors like limited training data, script complexity, and regional dialects, potentially affecting transcription accuracy.
+</Note>
+
+### Languages Supported
+
+```
+"Afrikaans": "af",
+"Arabic": "ar",
+"Belarusian": "be",
+"Bengali": "bn",
+"Bulgarian": "bg",
+"Chinese": "zh",
+"Czech": "cs",
+"Danish": "da",
+"Dutch": "nl",
+"English": "en",
+"Finnish": "fi",
+"French": "fr",
+"German": "de",
+"Greek": "el",
+"Hebrew": "he",
+"Hindi": "hi",
+"Hungarian": "hu",
+"Indonesian": "id",
+"Italian": "it",
+"Japanese": "ja",
+"Kannada": "kn",
+"Korean": "ko",
+"Malayalam": "ml",
+"Marathi": "mr",
+"Nepali": "ne",
+"Panjabi": "pa",
+"Persian": "fa",
+"Polish": "pl",
+"Portuguese": "pt",
+"Romanian": "ro",
+"Russian": "ru",
+"Serbian": "sr",
+"Spanish": "es",
+"Swedish": "sv",
+"Tagalog": "tl",
+"Tamil": "ta",
+"Telugu": "te",
+"Thai": "th",
+"Turkish": "tr",
+"Ukrainian": "uk",
+"Urdu": "ur",
+"Vietnamese": "vi",
+"Welsh": "cy"
+```
