Add release note for enterprise speech-to-text release

--- a/release-notes/api.mdx
+++ b/release-notes/api.mdx
@@ -4,6 +4,23 @@ description: "Follow along with updates across ModelsLab API and Developer Conso
 rss: true
 ---
 
+<Update label="2026-02-09" description="Enterprise API: Speech-to-Text Released">
+  ## New Enterprise API Endpoint: [Speech-to-Text](/enterprise-api/speech-to-text/speech-to-text)
+
+  Enterprise Speech-to-Text is now available for converting audio into text transcription.
+
+  #### API Endpoint
+
+  - **Enterprise API**: `POST /api/v1/enterprise/speech_to_text/transcribe`
+
+  #### Key Features
+
+  - Convert speech audio into text transcription
+  - Multi-language transcription support
+  - Optional timestamp controls with `timestamp_level` (`null`, `word`, `sentence`)
+  - Webhook support via `webhook` and `track_id` for async tracking
+</Update>
+
 <Update label="2025-02-05" description="Song Generator API: ACE-Step v1.5 Model">
   <Frame>
     <img
