--- a/voice-cloning/voice-design.mdx
+++ b/voice-cloning/voice-design.mdx
@@ -13,13 +13,17 @@ Make a `POST` request to below endpoint and pass the required parameters as a re
 ```json json
 {
     "key": "your_api_key",
-    "prompt": "Hello, welcome to the future of voice technology.",
-    "voice_description": "A warm, friendly female voice with a slight British accent",
+    "prompt": "Greetings, my friend. What brings you to Mount Olympus today? Here to gaze at my beautiful muscles again?",
+    "voice_description": "The friendly mythical God, Zeus, with a huge deep powerful voice. Charming, proud, strong and theatrical.",
     "language": "english",
     "webhook": null,
     "track_id": null
 }
 ```
+
+<Note>
+Both `prompt` and `voice_description` have a maximum limit of 1000 characters each.
+</Note>
 
 ## Supported Languages
 
