--- a/voice-cloning/overview.mdx
+++ b/voice-cloning/overview.mdx
@@ -40,4 +40,7 @@ description: 'Tools for speech-to-text, text-to-speech, text-to-SFX, and voice-o
   <Card title="Music Generation" href="/voice-cloning/music-gen" >
     Generate original music compositions based on textual prompts and styles
   </Card>
+  <Card title="Voice Design" href="/voice-cloning/voice-design" >
+    Design and generate custom voices using text prompts and voice descriptions
+  </Card>
 </CardGroup>
