--- a/enterprise-api/z-image-turbo/overview.mdx
+++ b/enterprise-api/z-image-turbo/overview.mdx
@@ -13,6 +13,10 @@ description: "Ultra-fast turbo image generation on dedicated enterprise GPU serv
     This endpoint generates and returns an image from a text prompt using the Flux model.
   </Card>
 
+  <Card title="Image to Image" href="/enterprise-api/z-image-turbo/img2img">
+    This endpoint generates an image from a text prompt and init image using the Z Image Turbo model.
+  </Card>
+
   <Card title="Fetch Queued Images" href="/enterprise-api/z-image-turbo/fetch">
     This endpoint fetches already generated or queued images by ID.
   </Card>
