fix: add missing deploy_types to update_s3 docs
Added: qwen_imagen_server, qwen_edit_2511, qwen_edit_bundle, qwen_tts,
flux_kontext_dev, image_to_video_ultra_wan22, video_server_ultra_wan22

Excluded: uncensored_chat, deepseek_chat, deepseek_playground_server

--- a/enterprise-api/general/update-s3-details.mdx
+++ b/enterprise-api/general/update-s3-details.mdx
@@ -57,7 +57,7 @@ Send a `POST` request to below endpoint. You have to pass the below listed reque
 </ParamField>
 
 <ParamField body="deploy_type" type="string">
-  This is the server type you want to add the S3 details for. Options: `text_to_image`, `image_editing`, `voice_cloning`, `text_to_3d`, `video`, `face_gen`, `deepfake`, `realtime`, `super_resolution`, `flux`, `flux_headshot`, `interior`. Default: `text_to_image`.
+  This is the server type you want to add the S3 details for. Options: `text_to_image`, `image_editing`, `voice_cloning`, `text_to_3d`, `video`, `face_gen`, `deepfake`, `realtime`, `super_resolution`, `flux`, `flux_headshot`, `interior`, `qwen_imagen_server`, `qwen_edit_2511`, `qwen_edit_bundle`, `qwen_tts`, `flux_kontext_dev`, `image_to_video_ultra_wan22`, `video_server_ultra_wan22`. Default: `text_to_image`.
 </ParamField>
 
 <ParamField body="public_url" type="string" required>
