--- a/enterprise-api/deepfake/specific-face-swap.mdx
+++ b/enterprise-api/deepfake/specific-face-swap.mdx
@@ -44,6 +44,10 @@ Make a `POST` request to below endpoint and pass the required parameters in the 
   Whether the generated result should have a watermark. Available options: `true`, `false`
 </ParamField>
 
+<ParamField query="watermark_image" type="string">
+  The image to use as a watermark. If not provided, a default watermark will be used. Parameter is only used if `watermark` is set to `true`.
+</ParamField>
+
 <ParamField query="base64" type="boolean" default="false">
   If provided `init_image` is in base64 format or if you want generated images as base64 string, set to <code>true</code>. Default: <code>false</code>.
 </ParamField>
