--- a/enterprise-api/deepfake/specific-video-swap.mdx
+++ b/enterprise-api/deepfake/specific-video-swap.mdx
@@ -48,6 +48,10 @@ Make a `POST` request to below endpoint and pass the required parameters in the 
   Whether the generated result should have a watermark. Available options: `true`, `false`
 </ParamField>
 
+<ParamField query="watermark_image" type="string">
+  The image to use as a watermark. If not provided, a default watermark will be used. Parameter is only used if `watermark` is set to `true`.
+</ParamField>
+
 <ParamField query="webhook" type="string">
   Set a URL to receive a POST API call once the generation is complete.
 </ParamField>
