fix: remove scene maker from docs and upadte chnagelog
Signed-off-by: Anurag Kanade <75563673+anurag12-webster@users.noreply.github.com>

--- a/release-notes/api.mdx
+++ b/release-notes/api.mdx
@@ -4,6 +4,16 @@ description: "Follow along with updates across ModelsLab API and Developer Conso
 rss: true
 ---
 
+<Update label="2026-01-26" description="Video API: Scene Maker Deprecated">
+  ## Video API: Scene Maker Endpoint Deprecated
+
+  The Scene Maker endpoint has been deprecated and is no longer supported as of January 26, 2026.
+
+  #### Deprecated Endpoint
+
+  - **Standard API**: `POST /api/v6/video/scene_maker`
+</Update>
+
 <Update label="2026-02-09" description="Enterprise API: Speech-to-Text Released">
   ## New Enterprise API Endpoint: [Speech-to-Text](/enterprise-api/speech-to-text/speech-to-text)
 
