--- a/video-api/overview.mdx
+++ b/video-api/overview.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Video Generation API"
-description: "Generate and edit AI videos from text prompts and images. Supports text-to-video, image-to-video, video-to-video, and scene generation via ModelsLab API."
+description: "Generate and edit AI videos from text prompts and images. Supports text-to-video, image-to-video, and video-to-video via ModelsLab API."
 ---
 
 ### Endpoints
