--- a/agent-skills.mdx
+++ b/agent-skills.mdx
@@ -33,6 +33,8 @@ Use `--all` if you want your agent to cover all ModelsLab capabilities.
 
 ## Available Skills
 
+### Generation Skills
+
 | Skill | Description | Use Cases |
 |-------|-------------|-----------|
 | 🎨 **Image Generation** (`modelslab-image-generation`) | Generate high-quality images from text prompts or transform images. | Product photos, marketing graphics, concept art |
@@ -42,6 +44,19 @@ Use `--all` if you want your agent to cover all ModelsLab capabilities.
 | 🎲 **3D Generation** (`modelslab-3d-generation`) | Generate 3D models from text or images. | Game assets, 3D printing, AR/VR |
 | 🎭 **Deepfake & Face Swap** (`modelslab-deepfake`) | Face swapping for images and videos. | Entertainment, personalization |
 | 🏠 **Interior Design** (`modelslab-interior-design`) | Room redesign and decoration. | Staging, renovation, mockups |
+
+### Agent Control Plane Skills
+
+| Skill | Description | Use Cases |
+|-------|-------------|-----------|
+| 🔑 **Account Management** (`modelslab-account-management`) | Signup, login, tokens, profile, API keys, and team management. | Agent bootstrapping, API key rotation, team onboarding |
+| 💳 **Billing & Subscriptions** (`modelslab-billing-subscriptions`) | Wallet funding, payment methods, subscriptions, invoices, coupons. | Auto-recharge, subscription lifecycle, invoice retrieval |
+| 🔍 **Model Discovery** (`modelslab-model-discovery`) | Search 50,000+ models and monitor usage analytics. | Model selection, usage monitoring, cost tracking |
+
+### Platform Skills
+
+| Skill | Description | Use Cases |
+|-------|-------------|-----------|
 | 🔔 **Webhooks** (`modelslab-webhooks`) | Handle async work with webhook notifications. | Batch jobs, background tasks |
 | 📦 **SDK Usage** (`modelslab-sdk-usage`) | Guidance for ModelsLab SDKs. | Type safety, autocomplete, cleaner code |
 
