--- a/index-full.mdx
+++ b/index-full.mdx
@@ -1,6 +1,8 @@
 ---
 title: "ModelsLab API Documentation"
 description: "Complete developer documentation for ModelsLab's AI API suite. Generate images, videos, audio, 3D models with Stable Diffusion, FLUX, and 10,000+ AI models. SDKs for Python, TypeScript, PHP, Dart, and Go."
+hidden: true
+noindex: true
 ---
 
 <img
@@ -19,9 +21,9 @@ description: "Complete developer documentation for ModelsLab's AI API suite. Gen
 Transform your ideas into reality with ModelsLab's comprehensive AI API suite. Get up and running in minutes with our developer-first platform.
 
 <CardGroup cols={2}>
-  <Card 
-    title="API Reference" 
-    icon="code" 
+  <Card
+    title="API Reference"
+    icon="code"
     href="/api-reference"
   >
     Complete API documentation with examples and integration guides
@@ -82,7 +84,21 @@ Explore our comprehensive suite of AI APIs designed for next-generation applicat
   >
     Transform text and images into 3D models and objects
   </Card>
-  
+  <Card
+    title="Uncensored Chat"
+    icon="comment"
+    href="/uncensored-chat-api/overview"
+  >
+    Engage in conversation without censorship.
+  </Card>
+  <Card
+    title="Deepfake"
+    icon="mask"
+    href="/deepfake-api/overview"
+  >
+    Generate Deepfake Videos
+  </Card>
+
 </CardGroup>
 
 ## Enterprise Solutions
@@ -111,4 +127,4 @@ Scale your AI applications with enterprise-grade infrastructure and support.
   >
     24/7 priority support with dedicated account management
   </Card>
-</CardGroup>  
+</CardGroup>
